-fixed navbar -added our work arrow animations -aligned all content

--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -339,6 +339,7 @@ a {
     }
   }
   .drawer-dropdown-menu {
+    display: block;
     background-color: $menu-hover;
     > .item > .drawer-menu-item {
       background-color: $menu-hover;
